<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, ProductLayer GmbH All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without
  ~ modification, are permitted provided that the following conditions are met:
  ~
  ~ - Redistributions of source code must retain the above copyright notice, this
  ~   list of conditions and the following disclaimer.
  ~
  ~ - Redistributions in binary form must reproduce the above copyright notice,
  ~   this list of conditions and the following disclaimer in the documentation
  ~   and/or other materials provided with the distribution.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~ AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~ IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~ DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end">
        <!-- cannot use android:animateLayoutChanges="true" due to bug in support library -->
        <!-- TODO add styles for form layout, header, content -->

        <TextView
            android:id="@+id/personal_header"
            style="?attr/textAppearanceSubhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/personal"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/personal_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/first_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"
                        android:inputType="textPersonName"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/last_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"
                        android:inputType="textPersonName"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/account_header"
            style="?attr/textAppearanceSubhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/account"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/account_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/nickname_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name_hint"
                        android:inputType="textPersonName"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/password_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_password_link"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address_hint"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/notification_header"
            style="?attr/textAppearanceSubhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/notification"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/notification_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/push_switch"
                style="?attr/textAppearanceSubhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/push_notification"
                android:textColor="?android:attr/textColorPrimary"/>

            <Switch
                android:id="@+id/email_switch"
                style="?attr/textAppearanceSubhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="12dp"
                android:text="@string/email_notification"
                android:textColor="?android:attr/textColorPrimary"/>

            <Switch
                android:id="@+id/newsletter_switch"
                style="?attr/textAppearanceSubhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="12dp"
                android:text="@string/newsletter"
                android:textColor="?android:attr/textColorPrimary"/>

        </LinearLayout>

        <TextView
            android:id="@+id/social_header"
            style="?attr/textAppearanceSubhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/social"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/social_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/facebook_switch"
                style="?attr/textAppearanceSubhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/facebook"
                android:textColor="?android:attr/textColorPrimary"/>

            <Switch
                android:id="@+id/twitter_switch"
                style="?attr/textAppearanceSubhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="12dp"
                android:text="@string/twitter"
                android:textColor="?android:attr/textColorPrimary"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
